--- a/HRM.html
+++ b/HRM.html
@@ -91,7 +91,7 @@
             <div class="OA_detail"
                 style="background: url('./images/index/radius.png') no-repeat 100% 0;background-size: 80% 100%;">
                 <div class="OA_card">
-                    <div class="OA_card_left">
+                    <div class="OA_card_left opcity" id="leftout1">
                         <img src="images/HRM/left1.png">
                         <h2 class="OA_title">智能招聘</h2>
                         <p class="OA_subtitle">流程灵活可追踪</p>
@@ -100,16 +100,16 @@
                             跟踪招聘进度，招聘更有效率。
                         </p>
                     </div>
-                    <div>
+                    <div class="opcity" id="rightout1">
                         <img src="images/HRM/right1.png">
                     </div>
                 </div>
 
                 <div class="OA_card">
-                    <div>
+                    <div class="opcity" id="leftout2">
                         <img src="images/HRM/right2.png">
                     </div>
-                    <div class="OA_card_left">
+                    <div class="OA_card_left opcity" id="rightout2">
                         <img src="images/HRM/left2.png">
                         <h2 class="OA_title">信息管理</h2>
                         <p class="OA_subtitle">用工风险透明化</p>
@@ -123,7 +123,7 @@
 
                 </div>
                 <div class="OA_card">
-                    <div class="OA_card_left">
+                    <div class="OA_card_left opcity" id="leftout3">
                         <img src="images/HRM/left3.png">
                         <h2 class="OA_title">智能薪酬</h2>
                         <p class="OA_subtitle">高效算薪更安全</p>
@@ -134,15 +134,15 @@
 
                         </p>
                     </div>
-                    <div class="OA_card_right">
+                    <div class="OA_card_right opcity" id="rightout3">
                         <img src="images/HRM/right3.png">
                     </div>
                 </div>
                 <div class="OA_card">
-                    <div>
+                    <div class="opcity" id="leftout4">
                         <img src="images/HRM/right4.png">
                     </div>
-                    <div class="OA_card_left">
+                    <div class="OA_card_left opcity" id="rightout4">
                         <img src="images/HRM/left4.png">
                         <h2 class="OA_title">员工培训</h2>
                         <p class="OA_subtitle">能力提升有成效</p>
@@ -157,7 +157,7 @@
                 </div>
                 <div class="OA_card">
 
-                    <div class="OA_card_left">
+                    <div class="OA_card_left opcity" id="leftout5">
                         <img src="images/HRM/left5.png">
                         <h2 class="OA_title">绩效管理</h2>
                         <p class="OA_subtitle">考核方式更透明</p>
@@ -168,7 +168,7 @@
 
                         </p>
                     </div>
-                    <div>
+                    <div class="opcity" id="rightout5">
                         <img src="images/HRM/right5.png">
                     </div>
                 </div>
