--- a/OA.html
+++ b/OA.html
@@ -76,22 +76,22 @@
             <div class="OA_detail"
                 style="background: url('./images/index/radius.png') no-repeat 100% 0;background-size: 80% 100%;">
                 <div class="OA_card">
-                    <div class="OA_card_left">
+                    <div id="leftout1" class="OA_card_left opcity">
                         <img src="images/OA/left1.png">
                         <h2 class="OA_title">日程汇总</h2>
                         <p class="OA_subtitle">时间管理更有效</p>
                         <p class="OA_content">设置智能提醒功能，临近日程提 醒处理，时间管理有效可控。 </p>
                     </div>
-                    <div>
+                    <div id="rightout1" class="opcity">
                         <img src="images/OA/right1.png">
                     </div>
                 </div>
 
                 <div class="OA_card">
-                    <div>
+                    <div id="leftout2" class="opcity">
                         <img src="images/OA/right2.png">
                     </div>
-                    <div class="OA_card_left">
+                    <div id="rightout2" class="OA_card_left opcity">
                         <img src="images/OA/left2.png">
                         <h2 class="OA_title">节点提醒</h2>
                         <p class="OA_subtitle">审批流程更快捷</p>
@@ -103,7 +103,7 @@
 
                 </div>
                 <div class="OA_card">
-                    <div class="OA_card_left">
+                    <div id="leftout3" class="OA_card_left opcity">
                         <img src="images/OA/left3.png">
                         <h2 class="OA_title">简化考勤</h2>
                         <p class="OA_subtitle">月末统计无烦恼</p>
@@ -112,15 +112,15 @@
                             计更方便，考勤管理更轻松。
                         </p>
                     </div>
-                    <div class="OA_card_right">
+                    <div id="rightout3" class="OA_card_right opcity">
                         <img src="images/OA/right3.png">
                     </div>
                 </div>
                 <div class="OA_card">
-                    <div>
+                    <div id="leftout4" class="opcity">
                         <img src="images/OA/right4.png">
                     </div>
-                    <div class="OA_card_left">
+                    <div id="rightout4" class="OA_card_left opcity">
                         <img src="images/OA/left4.png">
                         <h2 class="OA_title">标准模板</h2>
                         <p class="OA_subtitle">工作汇报更规范</p>
@@ -133,7 +133,7 @@
                 </div>
                 <div class="OA_card">
 
-                    <div class="OA_card_left">
+                    <div id="leftout5" class="OA_card_left opcity">
                         <img src="images/OA/left5.png">
                         <h2 class="OA_title">线上采购</h2>
                         <p class="OA_subtitle">流程追溯有保障</p>
@@ -142,7 +142,7 @@
                             置，满足企业个性化管理需求。
                         </p>
                     </div>
-                    <div>
+                    <div id="rightout5" class="opcity">
                         <img src="images/OA/right5.png">
                     </div>
                 </div>
