--- a/CRM.html
+++ b/CRM.html
@@ -135,7 +135,7 @@
             <div class="OA_detail"
                 style="background: url('./images/index/reserve.png') no-repeat 0% 0%;background-size: 80% 100%;">
                 <div class="OA_card OA_reverse">
-                    <div class="OA_card_left">
+                    <div class="OA_card_left opcity" id="rightout1">
                         <img src="images/CRM/left1.png">
                         <h2 class="OA_title">客户信息</h2>
                         <p class="OA_subtitle">集中管理更安全</p>
@@ -144,16 +144,16 @@
                             以及相关联系人，方便分析销售机会
                         </p>
                     </div>
-                    <div>
+                    <div class="opcity" id="leftout1">
                         <img src="images/CRM/right1.png">
                     </div>
                 </div>
 
                 <div class="OA_card OA_reverse">
-                    <div>
+                    <div class="opcity" id="rightout2">
                         <img src="images/CRM/right2.png">
                     </div>
-                    <div class="OA_card_left">
+                    <div class="OA_card_left opcity" id="leftout2">
                         <img src="images/CRM/left2.png">
                         <h2 class="OA_title">销售线索</h2>
                         <p class="OA_subtitle">智能寻找有效率</p>
@@ -165,22 +165,22 @@
 
                 </div>
                 <div class="OA_card OA_reverse">
-                    <div class="OA_card_left">
+                    <div class="OA_card_left opcity" id="rightout3">
                         <img src="images/CRM/left3.png">
                         <h2 class="OA_title">销售商机</h2>
                         <p class="OA_subtitle">有效跟踪推进快</p>
                         <p class="OA_content">自定义客户标签，有效追踪商机进展，
                             推进快速结单，实现销售精细化管理 </p>
                     </div>
-                    <div class="OA_card_right">
+                    <div class="OA_card_right opcity" id="leftout3">
                         <img src="images/CRM/right3.png">
                     </div>
                 </div>
                 <div class="OA_card OA_reverse">
-                    <div>
+                    <div class="opcity" id="rightout4">
                         <img src="images/CRM/right4.png">
                     </div>
-                    <div class="OA_card_left">
+                    <div class="OA_card_left opcity" id="leftout4">
                         <img src="images/CRM/left4.png">
                         <h2 class="OA_title">快速跟进</h2>
                         <p class="OA_subtitle">客户服务有节奏</p>
@@ -191,7 +191,7 @@
 
                 </div>
                 <div class="OA_card OA_reverse">
-                    <div class="OA_card_left">
+                    <div class="OA_card_left opcity" id="rightout5">
                         <img src="images/CRM/left5.png">
                         <h2 class="OA_title">订单管理</h2>
                         <p class="OA_subtitle">结单回款有保障</p>
@@ -199,7 +199,7 @@
                             数据，确保产品交付和数据准确
                             推进快速结单 </p>
                     </div>
-                    <div>
+                    <div id="leftout5" class="opcity">
                         <img src="images/CRM/right5.png">
                     </div>
                 </div>
