--- a/PM.html
+++ b/PM.html
@@ -16,6 +16,88 @@
     <script src="js/jquery-1.12.4.min.js"></script>
     <!-- <script src="js/swiper3.min.js"></script> -->
     <script src="js/global.js"></script>
+    <script src="js/jquery.easing.1.3.js"></script>
+    <script src="js/jquery.roundabout.min.js"></script>
+
+    <style>
+        #featured-area {
+            height: 600px;
+            width: 100%;
+            margin: 0 auto 0;
+            position: relative;
+            /* left: -140px; */
+            display: flex;
+            justify-content: center;
+            overflow: hidden;
+        }
+
+        .roundabout-holder {
+            list-style: none;
+            width: 100%;
+            height: 600px;
+            margin: 0 auto;
+        }
+
+        .roundabout-moveable-item {
+            font-size: 12px !important;
+            height: 389px !important;
+            width: 646px !important;
+            cursor: pointer;
+            padding: 5px;
+            border: 1px solid #aaa;
+            -webkit-border-radius: 5px;
+            -moz-border-radius: 5px;
+            background: #f9f9f9
+        }
+
+        .roundabout-moveable-item img {
+            height: 100%;
+            width: 100%;
+            background-color: #fff;
+            margin: 0
+        }
+
+        .roundabout-in-focus {
+            cursor: auto
+        }
+
+        .roundabout-in-focus:hover {
+            -webkit-box-shadow: 0 0 20px #787878;
+            -moz-box-shadow: 0 0 20px #787878;
+            background: #f9f9f9
+        }
+
+        .roundabout-holder span {
+            display: none
+        }
+
+        .roundabout-in-focus:hover span {
+            display: inline;
+            position: absolute;
+            bottom: 5px;
+            right: 5px;
+            padding: 8px 20px;
+            background: #f9f9f9;
+            color: #36c;
+            z-index: 999;
+            -webkit-border-top-left-radius: 5px;
+            -moz-border-radius-topleft: 5px;
+            border-left: 1px solid #aaa;
+            border-top: 1px solid #aaa
+        }
+
+        .roundabout a:active,
+        .roundabout a:focus,
+        .roundabout a:visited {
+            outline: 0;
+            text-decoration: none
+        }
+
+        .roundabout li {
+            margin: 0
+        }
+    </style>
+
 </head>
 
 <body>
@@ -38,47 +120,42 @@
             <h2 class="primary">持续优化的协同项目管理</h2>
             <p>转为企业协作办公场景而设计，专注提升办公和管理效率，为企业节约管理成本，进而提升企业核心竞争力。</p>
             <a href="#" class="bg_primary tiyan_btn" style="color: #fff">免费体验</a>
-            <div class="swiper-container">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="images/OA/OA1.png" alt="" width="100%" height="100%"></div>
-                    <div class="swiper-slide"><img src="images/OA/OA2.png" alt="" width="100%" height="100%"></div>
-                    <div class="swiper-slide"><img src="images/OA/OA3.png" alt="" width="100%" height="100%"></div>
-                </div>
-                <!-- 如果需要分页器 -->
-                <div class="swiper-pagination"></div>
 
-                <!-- 如果需要导航按钮 -->
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
+            <div class="img_div">
+                <div class="" id="featured-area">
+                    <ul>
+                        <li>
+                            <img src="images/PM/PM1.png">
+                        </li>
+                        <li>
+                            <img src="images/PM/PM2.png">
+                        </li>
+                        <li>
+                            <img src="images/PM/PM3.png">
+                        </li>
+                    </ul>
+                </div>
             </div>
+
             <h2 class="primary">每一个项目更简单高效</h2>
             <p>实现沟通、计划、分析、立项、文档等全面管理，项目过程可视化、流程化、自动化、满足个性化得、优化的项目管理需求。</p>
             <script>
-                var mySwiper = new Swiper('.swiper-container', {
-                    // direction: 'vertical', // 垂直切换选项
-                    loop: true, // 循环模式选项
-                    autoplay: true,
-
-                    // 如果需要分页器
-                    pagination: {
-                        el: '.swiper-pagination',
-                        type: 'bullets',
-                        progressbarOpposite: true,
-                    },
-
-                    // 如果需要前进后退按钮
-                    navigation: {
-                        nextEl: '.swiper-button-next',
-                        prevEl: '.swiper-button-prev',
-                    },
-                })
+                $(document).ready(function () {
+                    $('#featured-area ul').roundabout({
+                        autoplay: true,
+                        autoplayDuration: 4000,
+                        easing: 'easeOutInCirc',
+                        duration: 600,
+                        enableDrag: true
+                    });
+                });
             </script>
         </div>
         <div class="OA_detail_container">
             <div class="OA_detail"
                 style="background: url('./images/index/reserve.png') no-repeat 0% 0%;background-size: 80% 100%;">
                 <div class="OA_card OA_reverse">
-                    <div class="OA_card_left">
+                    <div class="OA_card_left opcity" id="rightout1">
                         <img src="images/PM/left1.png">
                         <h2 class="OA_title">立项管理</h2>
                         <p class="OA_subtitle">目标明确更顺畅</p>
@@ -87,16 +164,16 @@
                             实时追踪项目信息，项目分析更方便
                         </p>
                     </div>
-                    <div>
+                    <div class="opcity" id="leftout1">
                         <img src="images/PM/right1.png">
                     </div>
                 </div>
 
                 <div class="OA_card OA_reverse">
-                    <div>
+                    <div class="opcity" id="rightout2">
                         <img src="images/PM/right2.png">
                     </div>
-                    <div class="OA_card_left">
+                    <div class="OA_card_left opcity" id="leftout2">
                         <img src="images/PM/left2.png">
                         <h2 class="OA_title">计划管理</h2>
                         <p class="OA_subtitle">任务进度有掌控</p>
@@ -110,48 +187,48 @@
 
                 </div>
                 <div class="OA_card OA_reverse">
-                    <div class="OA_card_left">
+                    <div class="OA_card_left opcity" id="rightout3">
                         <img src="images/PM/left3.png">
                         <h2 class="OA_title">数据分析</h2>
                         <p class="OA_subtitle">报表展示更直观</p>
                         <p class="OA_content">
                             可利用甘特图提供项目进度详细视图
-                            还可通过报表查看人员任务量情况 
+                            还可通过报表查看人员任务量情况
                         </p>
                     </div>
-                    <div class="OA_card_right">
+                    <div class="OA_card_right opcity" id="leftout3">
                         <img src="images/PM/right3.png">
                     </div>
                 </div>
                 <div class="OA_card OA_reverse">
-                    <div>
+                    <div class="opcity" id="rightout4">
                         <img src="images/PM/right4.png">
                     </div>
-                    <div class="OA_card_left">
+                    <div class="OA_card_left opcity" id="leftout4">
                         <img src="images/PM/left4.png">
                         <h2 class="OA_title">即时沟通</h2>
                         <p class="OA_subtitle">在线讨论更高效</p>
                         <p class="OA_content">
-                            
-                                专为工作场景打造的企业即时沟通工具
-                                成员之间保持实时联系，随时协调工作
-                                                        
+
+                            专为工作场景打造的企业即时沟通工具
+                            成员之间保持实时联系，随时协调工作
+
                         </p>
                     </div>
 
                 </div>
                 <div class="OA_card OA_reverse">
-                    <div class="OA_card_left">
+                    <div class="OA_card_left opcity" id="rightout5">
                         <img src="images/PM/left5.png">
                         <h2 class="OA_title">文档共享</h2>
                         <p class="OA_subtitle">分享协作更方便</p>
                         <p class="OA_content">
-                                确保团队成员随时获取项目文件最新
-                                版本，还可对文档、演示文稿和表格
-                                进行协同编辑
+                            确保团队成员随时获取项目文件最新
+                            版本，还可对文档、演示文稿和表格
+                            进行协同编辑
                         </p>
                     </div>
-                    <div>
+                    <div class="opcity" id="leftout5">
                         <img src="images/PM/right5.png">
                     </div>
                 </div>
